--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,6 +3,7 @@
   #storybook-root {
     width: 100%;
     height: 100%;
+    background-color: #1d1d1d;
   }
   body.sb-show-main.sb-main-padded {
     margin: 0;
